fixed spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -122,7 +122,10 @@ textarea {
   margin-bottom: 10px;
 }
 
-
+ul, ol {
+  padding: 0;
+  margin: 0 0 -5px 0px;
+}
 
 .jumbotron {
   margin-left:auto; 
