--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -52,7 +52,7 @@
 }
 
 #headerTextSmall{
-   font-family: "TitilliumMaps26L-500wt";
+   font-family: "TitilliumMaps26L-250wt";
    font-size: 30px;
    text-transform: lowercase;
    color: #fff;
